--- a/front/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
+++ b/front/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
@@ -6,7 +6,7 @@
 
   <div class="cont-info-doctors flex flex-wrap justify-center sm:justify-between gap-4">
     @for (doctor of doctores; track $index) {
-      <app-info-doctor [doctor]="doctor" class="info-doctor w-full sm:w-[48%] lg:w-[20%]"></app-info-doctor>
+      <app-info-doctor [doctor]="doctor" class="info-doctor"></app-info-doctor>
     }
   </div>
 </div>
