--- a/front/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
+++ b/front/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
@@ -1,5 +1,5 @@
 @if (doctor) {
-  <div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] h-auto mb-4">
+  <div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] min-w-[200px] h-auto mb-4">
   <div class="card-content flex flex-wrap p-4">
     <div class="top flex w-full border-b border-[#e1e1e1] pb-3 mb-3">
       <div class="cont-img w-[85px] h-[85px]">
@@ -12,8 +12,8 @@
     </div>
     <div class="location flex items-center text-[#666] text-sm mb-3">
       <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" class="w-[16px] h-[16px] mr-2 fill-[#666]">
-          <path d="M12 2c-4.4 0-8 3.6-8 8c0 5.4 7 11.5 7.3 11.8c.2.1.5.2.7.2s.5-.1.7-.2C13 21.5 20 15.4 20 10c0-4.4-3.6-8-8-8m0 17.7c-2.1-2-6-6.3-6-9.7c0-3.3 2.7-6 6-6s6 2.7 6 6s-3.9 7.7-6 9.7M12 6c-2.2 0-4 1.8-4 4s1.8 4 4 4s4-1.8 4-4s-1.8-4-4-4m0 6c-1.1 0-2-.9-2-2s.9-2 2-2s2 .9 2 2s-.9 2-2 2"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" class="w-[18px] h-[18px] mr-2 fill-[#666]">
+          <path [attr.d]="svg.direccion" />
         </svg>
       </div>
       <div class="text-location flex flex-col justify-center h-full">
@@ -52,13 +52,13 @@
           <div class="personal-info grid grid-cols-2 gap-2 mt-2">
             <div class="flex items-center">
               <svg class="w-4 h-4 mr-1 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.sexo"/>
               </svg>
               <span class="text-gray-600 text-sm">{{ cita.usuario.sexo }}</span>
             </div>
             <div class="flex items-center">
               <svg class="w-4 h-4 mr-1 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.nacimiento"/>
               </svg>
               <span class="text-gray-600 text-sm">{{ calcularEdad(cita.usuario.fechaNacimiento) }} años</span>
             </div>
@@ -72,7 +72,7 @@
         <div class="flex items-center p-3 bg-gray-50 rounded-lg">
           <div class="bg-[#e0f2f8] p-2 rounded-lg mr-3">
             <svg class="w-5 h-5 text-[#3b9ab8]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.hora"/>
             </svg>
           </div>
           <div>
@@ -87,8 +87,8 @@
         <div class="flex items-center p-3 bg-gray-50 rounded-lg">
           <div class="bg-[#e0f2f8] p-2 rounded-lg mr-3">
             <svg class="w-5 h-5 text-[#3b9ab8]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.ubicacion1"/>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.ubicacion2"/>
             </svg>
           </div>
           <div>
@@ -107,7 +107,7 @@
                 class="bg-[#3b9ab8] text-white px-5 py-2.5 rounded-lg hover:bg-[#2d7a8f] transition-all 
                        flex items-center font-medium shadow-sm hover:shadow-md">
             <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.guardar"/>
             </svg>
             Generar Receta
         </button>
