--- a/front/src/app/sections/doctores-recomendados/info-doctor/info-doctor.component.html
+++ b/front/src/app/sections/doctores-recomendados/info-doctor/info-doctor.component.html
@@ -40,10 +40,10 @@
   </div>
 
   <div class="votes flex items-center justify-center mt-4">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="mr-2">
-      <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="mr-1">
+      <path [attr.d]="svg.corazon"/>
     </svg>
-    <span class="block text-[#333] font-semibold">{{ doctor.votos }} Votos</span>
+    <span class="block text-[#333] font-semibold">{{ doctor.votos }} &nbsp; Popularidad</span>
   </div>
 
   <div class="book-button mt-4 text-center">
@@ -64,7 +64,7 @@
           <div class="text-center space-y-4">
             <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-blue-100">
               <svg class="h-6 w-6 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="svg.modal"/>
               </svg>
             </div>
 
