--- a/front/src/app/navs/perfil-nav/perfil-nav.component.html
+++ b/front/src/app/navs/perfil-nav/perfil-nav.component.html
@@ -2,17 +2,29 @@
   class="container relative p-4 sm:p-6 md:p-8 lg:p-10 my-4 bg-white"
 >
   <nav class="flex flex-col sm:flex-row sm:space-x-6 space-y-2 sm:space-y-0 border-b border-gray-200 w-full">
-    <a href="/perfil" routerLink="/perfil"
-      routerLinkActive="text-[#3b9ab8] border-b-2 border-[#3b9ab8]"
-      class="pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300"
-    >
-      General</a
-    >
-    <a href="/perfilHistorial" routerLink="/perfilHistorial"
-      routerLinkActive="text-[#3b9ab8] border-b-2 border-blue-600"
-      class="pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300"
-    >
-      Historial de citas</a
-    >
+    <a 
+  href="/perfil" 
+  routerLink="/perfil"
+  routerLinkActive="text-[#3b9ab8] border-b-2 border-[#3b9ab8]"
+  [ngClass]="{
+    'selected': selectedGeneral,
+    'pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300': true
+  }"
+>
+  General
+</a>
+
+<a 
+  href="/perfilHistorial" 
+  routerLink="/perfilHistorial"
+  routerLinkActive="text-[#3b9ab8] border-b-2 border-blue-600"
+  [ngClass]="{
+    'selected': !selectedGeneral,
+    'pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300': true
+  }"
+>
+  Historial de citas
+</a>
+
   </nav>
 </div>
