--- a/front/src/app/vistas/perfil-historial/perfil-historial.component.css
+++ b/front/src/app/vistas/perfil-historial/perfil-historial.component.css
@@ -1,5 +1,34 @@
+.body-profile {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 242px 1fr;
+    grid-template-rows: 15% 1fr;
+    grid-template-areas: 
+    "zn     zh"
+    "zn     zs";
+}
+
+app-secundary-nav {
+    grid-area: zh;
+}
+
+app-left-nav {
+    grid-area: zn;
+}
+
+.contenido {
+    grid-area: zs;
+    /* background-color: #D0D0D0; */
+}
+
 @media (max-width: 640px) {
-    app-secundary-nav {
-        margin-left: -60px;
+    .body-profile {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "zh"
+            "zs"
+            "zf";
     }
+    
+
 }
