--- a/front/src/app/vistas/perfil-historial/perfil-historial.component.html
+++ b/front/src/app/vistas/perfil-historial/perfil-historial.component.html
@@ -1,30 +1,13 @@
-@if (!isMobile) {
-<div class="grid grid-cols-[15%_1fr] h-screen max-[1024px]:grid-cols-1 max-[1024px]:h-auto">
-  <div class="max-[1024px]:hidden">
-    <app-left-nav [perfil]="true"></app-left-nav>
-  </div>
-  <div class="flex flex-col mx-[5%] max-[1024px]:mx-4">
-    <app-secundary-nav [titulo]="'Mi historial'"></app-secundary-nav>
-    <app-perfil-nav></app-perfil-nav>
-    <app-historial></app-historial>
-  </div>
-</div>
-}@else {
-<div class="flex flex-col h-screen">
-  <!-- Left Nav (oculto en pantallas pequeñas) -->
-  <div id="leftNav" [ngClass]="{ 'translate-x-0': isLeftNavOpen, '-translate-x-full': !isLeftNavOpen }"
-    class="translate-x-0 transition-transform transform lg:block fixed inset-y-0 left-0 z-40 bg-white border-r border-gray-200 max-[1024px]:w-[75%] max-[768px]:w-[85%] max-[640px]:w-full">
-    <app-left-nav [citas]="true"></app-left-nav>
+<div class="body-profile">
+  <app-left-nav [citas]="true" />
+  <app-secundary-nav [titulo]="'Mi historial'" />
+
+  <div class="contenido">
+    <app-perfil-nav [selectedGeneral]="false"/>
+    <app-historial/>
   </div>
 
-  <!-- Main Content -->
-  <div class="p-4 flex flex-col max-[768px]:p-3 max-[640px]:p-2">
-    <app-secundary-nav [titulo]="'Mi historial'"></app-secundary-nav>
-    <app-perfil-nav></app-perfil-nav>
-    <app-historial></app-historial>
-  </div>
-
-  <!-- Overlay (Aparece cuando el menú está abierto) -->
-  <div *ngIf="isLeftNavOpen" (click)="isLeftNavOpen = false" class="fixed inset-0 bg-black bg-opacity-50 z-30"></div>
 </div>
-}
+
+<!-- Overlay (Aparece cuando el menú está abierto) -->
+<div *ngIf="isLeftNavOpen" (click)="isLeftNavOpen = false" class="fixed inset-0 bg-black bg-opacity-50 z-30"></div>
