--- a/front/src/app/vistas/profile/profile.component.html
+++ b/front/src/app/vistas/profile/profile.component.html
@@ -1,10 +1,13 @@
 <div class="body-profile">
-    <app-left-nav [perfil]="true"></app-left-nav>
-    <app-secundary-nav [titulo]="'Mi perfil'"></app-secundary-nav>
-    <div class="contenido mx-[5%]">
-        <app-perfil-nav />
-        <app-info-perfil />
-        <app-info-detallada />
-        <app-info-general />
+    <app-left-nav [perfil]="true"/>
+    <app-secundary-nav [titulo]="'Mi perfil'"/>
+    <div class="contenido ">
+        <app-perfil-nav [selectedGeneral]="true"/>
+        <div class="mx-[5%]">
+            <app-info-perfil />
+            <app-info-detallada />
+            <app-info-general />
+        </div>
+
     </div>
 </div>
