--- a/front/src/app/sections/lista-citas/cita/cita.component.html
+++ b/front/src/app/sections/lista-citas/cita/cita.component.html
@@ -74,13 +74,13 @@
         <p class="font-semibold text-gray-800">Motivo: <span class="font-normal text-[#4b5563]">{{ cita.motivo }}</span></p>
       }
       @if (cita.estado === "terminada") {
-        <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
+        <a href="/informes/{{cita.id}}" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
       }
     </div>
 
     @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
       @if (isNotDoctor === false) {
-        <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md">
+        <a href="/nuevaReceta/{{usuario.id}}/{{cita.id}}" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path fill="currentColor" [attr.d]="svg.addReceta1"/>
             <path fill="currentColor" fill-rule="evenodd" [attr.d]="svg.addReceta2" clip-rule="evenodd" />
