refactor: Refactor code structure for improved readability and maintainability

--- a/front/src/app/sections/historial/cita-historial/cita-historial.component.html
+++ b/front/src/app/sections/historial/cita-historial/cita-historial.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center">
     <div>
       <!-- Foto del doctor o usuario -->
-      <img class="w-16 h-16 rounded-full mr-3" 
+      <img class="w-16 h-16 rounded-full mr-3 min-w-[64px] min-h-[64px]" 
            [src]="usuarios ? 'img/doctores/' + cita.doctor.fotoPerfil : 'img/usuarios/' + cita.usuario.fotoPerfil">
     </div>
     <div class="ml-4">
