--- a/front/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
+++ b/front/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
@@ -78,7 +78,7 @@
           <div>
             <p class="text-xs text-gray-500 mb-1">Hora de la cita</p>
             <p class="text-sm font-medium text-gray-900">
-              {{ cita.fecha | date:'shortTime' }}
+              {{ cita.fecha | date: 'HH:mm':'UTC' }}
             </p>
           </div>
         </div>
