Fix: update app-left-nav binding from 'citas' to 'perfil'

--- a/front/src/app/vistas/perfil-historial/perfil-historial.component.html
+++ b/front/src/app/vistas/perfil-historial/perfil-historial.component.html
@@ -1,5 +1,5 @@
 <div class="body-profile">
-  <app-left-nav [citas]="true" />
+  <app-left-nav [perfil]="true" />
   <app-secundary-nav [titulo]="'Mi historial'" />
 
   <div class="contenido">
